<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".old.views.DateFragment">

    <TextView
        android:id="@+id/tw_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/nej"
        android:textColor="@color/black"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tw_yes"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/tw_yes"
        app:layout_constraintTop_toBottomOf="@+id/tw_yes" />

    <ImageView
        android:id="@+id/img_lineSquirly"
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image"
        android:src="@drawable/path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_whenQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="40dp"
        android:text="@string/slutade_du_idag"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tw_yes"
        app:layout_constraintStart_toStartOf="@+id/tw_yes"
        app:layout_constraintTop_toBottomOf="@+id/img_lineSquirly" />

    <TextView
        android:id="@+id/tw_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ja"
        android:textColor="@color/black"
        android:textSize="95sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_whenQuit"
        app:layout_constraintVertical_bias="0.107" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="81dp"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.5"
        android:src="@drawable/logo_no_undertext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_progressbar3"
        app:layout_constraintBottom_toTopOf="@+id/tw_whenQuit"
        app:layout_constraintEnd_toEndOf="@+id/tw_yes"
        app:layout_constraintStart_toStartOf="@+id/tw_yes"
        app:layout_constraintTop_toBottomOf="@+id/img_lineSquirly" />

</androidx.constraintlayout.widget.ConstraintLayout>