<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".old.views.achievementslides.ScreenSlide30Fragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/yellow"
        app:cardElevation="10dp"
        android:layout_marginVertical="15dp"

        android:layout_marginHorizontal="25dp"
        style="@style/Widget.App.CardView"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tw_achievement"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_365_dagar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/yellow"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.App.CardView"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tw_daysLeftAchievement365"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/montserrat_bold"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/_12"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="90sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout365"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout365"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/linearLayout365" />

            <TextView
                android:id="@+id/daysLeftAchievement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/dagar_kvar_till_m_l"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationY="-35dp"
                app:layout_constraintTop_toBottomOf="@+id/tw_daysLeftAchievement365"
                tools:layout_editor_absoluteX="25dp" />

            <LinearLayout
                android:id="@+id/linearLayout365"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/arrowLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/vector_arrow_left"
                    android:contentDescription="@string/image" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="8dp"
                    android:layout_marginHorizontal="30dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/line"
                    android:contentDescription="@string/image" />

                <ImageView
                    android:id="@+id/arrowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/vector_arrow_right"
                    android:contentDescription="@string/image" />


            </LinearLayout>

            <TextView
                android:id="@+id/tw_moneySavedAchievement365"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="90sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout365"
                app:layout_constraintStart_toStartOf="@+id/linearLayout365"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout365" />

            <TextView
                android:id="@+id/moneySavedAchievement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/kronor_sparat_vid_m_l"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationY="-25dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout365"
                app:layout_constraintStart_toStartOf="@+id/linearLayout365"
                app:layout_constraintTop_toBottomOf="@+id/tw_moneySavedAchievement365" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>