<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".CostFragment">

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="116dp"
        android:valueFrom="1"
        android:valueTo="100"
        app:haloColor="@color/yellow"
        app:labelBehavior="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_whenQuit"
        app:layout_constraintVertical_bias="1.0"
        app:trackColorInactive="@color/orange"
        app:trackHeight="10dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tw_costPerUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="95sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sliderCost"
        app:layout_constraintEnd_toEndOf="@+id/sliderCost"
        app:layout_constraintStart_toStartOf="@+id/sliderCost" />

    <ImageView
        android:id="@+id/img_lineSquirly"
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="81dp"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.5"
        android:src="@drawable/logo_no_undertext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tw_whenQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="40dp"
        android:text="@string/vad_kostar_en_dosa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_lineSquirly" />

    <ImageView
        android:id="@+id/btn_goToCost"
        android:layout_width="42dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_progressbar2"
        app:layout_constraintBottom_toTopOf="@+id/tw_whenQuit"
        app:layout_constraintEnd_toEndOf="@+id/sliderCost"
        app:layout_constraintStart_toStartOf="@+id/sliderCost"
        app:layout_constraintTop_toBottomOf="@+id/img_lineSquirly" />
</androidx.constraintlayout.widget.ConstraintLayout>